Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UDecalComponent.h

	DOTNET_EXPORT auto E_PROP_UDecalComponent_bDestroyOwnerAfterFade_GET(UDecalComponent* Ptr) { return Ptr->bDestroyOwnerAfterFade; }
	DOTNET_EXPORT void E_PROP_UDecalComponent_bDestroyOwnerAfterFade_SET(UDecalComponent* Ptr, uint8 Value) { Ptr->bDestroyOwnerAfterFade = Value; }
	
	DOTNET_EXPORT auto E_PROP_UDecalComponent_DecalSize_GET(UDecalComponent* Ptr) { return (INT_PTR)&(Ptr->DecalSize); }
	DOTNET_EXPORT void E_PROP_UDecalComponent_DecalSize_SET(UDecalComponent* Ptr, INT_PTR Value) { Ptr->DecalSize = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UDecalComponent_FadeDuration_GET(UDecalComponent* Ptr) { return Ptr->FadeDuration; }
	DOTNET_EXPORT void E_PROP_UDecalComponent_FadeDuration_SET(UDecalComponent* Ptr, float Value) { Ptr->FadeDuration = Value; }
	
	DOTNET_EXPORT auto E_PROP_UDecalComponent_FadeScreenSize_GET(UDecalComponent* Ptr) { return Ptr->FadeScreenSize; }
	DOTNET_EXPORT void E_PROP_UDecalComponent_FadeScreenSize_SET(UDecalComponent* Ptr, float Value) { Ptr->FadeScreenSize = Value; }
	
	DOTNET_EXPORT auto E_PROP_UDecalComponent_FadeStartDelay_GET(UDecalComponent* Ptr) { return Ptr->FadeStartDelay; }
	DOTNET_EXPORT void E_PROP_UDecalComponent_FadeStartDelay_SET(UDecalComponent* Ptr, float Value) { Ptr->FadeStartDelay = Value; }
	
	DOTNET_EXPORT auto E_PROP_UDecalComponent_SortOrder_GET(UDecalComponent* Ptr) { return Ptr->SortOrder; }
	DOTNET_EXPORT void E_PROP_UDecalComponent_SortOrder_SET(UDecalComponent* Ptr, int32 Value) { Ptr->SortOrder = Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_UDecalComponent(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<UDecalComponent>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_UDecalComponent_BeginPlay(UDecalComponent* Self)
	{
		Self->BeginPlay();
	}
	DOTNET_EXPORT auto E_UDecalComponent_CreateRenderState_Concurrent(UDecalComponent* Self)
	{
		Self->CreateRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_UDecalComponent_DestroyRenderState_Concurrent(UDecalComponent* Self)
	{
		Self->DestroyRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetFadeDuration(UDecalComponent* Self)
	{
		return Self->GetFadeDuration();
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetFadeStartDelay(UDecalComponent* Self)
	{
		return Self->GetFadeStartDelay();
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetNumMaterials(UDecalComponent* Self)
	{
		return Self->GetNumMaterials();
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetTransformIncludingDecalSize(UDecalComponent* Self)
	{
		return (INT_PTR) new FTransform(Self->GetTransformIncludingDecalSize());
	}
	DOTNET_EXPORT auto E_UDecalComponent_LifeSpanCallback(UDecalComponent* Self)
	{
		((E_PROTECTED_WRAP_UDecalComponent*)Self)->LifeSpanCallback_WRAP();
	}
	DOTNET_EXPORT auto E_UDecalComponent_PushSelectionToProxy(UDecalComponent* Self)
	{
		Self->PushSelectionToProxy();
	}
	DOTNET_EXPORT auto E_UDecalComponent_SendRenderTransform_Concurrent(UDecalComponent* Self)
	{
		Self->SendRenderTransform_Concurrent();
	}
	DOTNET_EXPORT auto E_UDecalComponent_SetFadeOut(UDecalComponent* Self, float StartDelay, float Duration, bool DestroyOwnerAfterFade)
	{
		auto _p0 = StartDelay;
		auto _p1 = Duration;
		auto _p2 = DestroyOwnerAfterFade;
		Self->SetFadeOut(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UDecalComponent_SetFadeScreenSize(UDecalComponent* Self, float NewFadeScreenSize)
	{
		auto _p0 = NewFadeScreenSize;
		Self->SetFadeScreenSize(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_SetLifeSpan(UDecalComponent* Self, float LifeSpan)
	{
		auto _p0 = LifeSpan;
		Self->SetLifeSpan(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_SetSortOrder(UDecalComponent* Self, int32 Value)
	{
		auto _p0 = Value;
		Self->SetSortOrder(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_ApplyWorldOffset(UDecalComponent* Self, INT_PTR InOffset, bool bWorldShift)
	{
		auto _p0 = *(FVector*)InOffset;
		auto _p1 = bWorldShift;
		Self->ApplyWorldOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UDecalComponent_BeginDestroy(UDecalComponent* Self)
	{
		Self->BeginDestroy();
	}
	DOTNET_EXPORT auto E_UDecalComponent_CalcBoundingCylinder(UDecalComponent* Self, float CylinderRadius, float CylinderHalfHeight)
	{
		auto _p0 = CylinderRadius;
		auto _p1 = CylinderHalfHeight;
		Self->CalcBoundingCylinder(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UDecalComponent_CanAttachAsChild(UDecalComponent* Self, USceneComponent* ChildComponent, char* SocketName)
	{
		auto _p0 = ChildComponent;
		auto _p1 = ConvertFromManage_FName(SocketName);
		return Self->CanAttachAsChild(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UDecalComponent_DestroyComponent(UDecalComponent* Self, bool bPromoteChildren)
	{
		auto _p0 = bPromoteChildren;
		Self->DestroyComponent(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_DetachFromComponent(UDecalComponent* Self, INT_PTR DetachmentRules)
	{
		auto _p0 = *(FDetachmentTransformRules*)DetachmentRules;
		Self->DetachFromComponent(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_DetachFromParent(UDecalComponent* Self, bool bMaintainWorldPosition, bool bCallModify)
	{
		auto _p0 = bMaintainWorldPosition;
		auto _p1 = bCallModify;
		Self->DetachFromParent(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UDecalComponent_DoesSocketExist(UDecalComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return Self->DoesSocketExist(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetCollisionObjectType(UDecalComponent* Self)
	{
		return Self->GetCollisionObjectType();
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetCollisionResponseToChannel(UDecalComponent* Self, ECollisionChannel Channel)
	{
		auto _p0 = Channel;
		return Self->GetCollisionResponseToChannel(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetComponentVelocity(UDecalComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetComponentVelocity());
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetSocketLocation(UDecalComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FVector(Self->GetSocketLocation(_p0));
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetSocketQuaternion(UDecalComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FQuat(Self->GetSocketQuaternion(_p0));
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetSocketRotation(UDecalComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FRotator(Self->GetSocketRotation(_p0));
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetSocketTransform(UDecalComponent* Self, char* InSocketName, ERelativeTransformSpace TransformSpace)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		auto _p1 = TransformSpace;
		return (INT_PTR) new FTransform(Self->GetSocketTransform(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UDecalComponent_HasAnySockets(UDecalComponent* Self)
	{
		return Self->HasAnySockets();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsAnySimulatingPhysics(UDecalComponent* Self)
	{
		return Self->IsAnySimulatingPhysics();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsPrecomputedLightingValid(UDecalComponent* Self)
	{
		return Self->IsPrecomputedLightingValid();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsSimulatingPhysics(UDecalComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return Self->IsSimulatingPhysics(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsVisible(UDecalComponent* Self)
	{
		return Self->IsVisible();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsVisibleInEditor(UDecalComponent* Self)
	{
		return Self->IsVisibleInEditor();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsWorldGeometry(UDecalComponent* Self)
	{
		return Self->IsWorldGeometry();
	}
	DOTNET_EXPORT auto E_UDecalComponent_MoveComponentImpl(UDecalComponent* Self, INT_PTR Delta, INT_PTR NewRotation, bool bSweep, INT_PTR Hit, EMoveComponentFlags MoveFlags, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = *(FQuat*)NewRotation;
		auto _p2 = bSweep;
		auto _p3 = (FHitResult*)Hit;
		auto _p4 = MoveFlags;
		auto _p5 = Teleport;
		return ((E_PROTECTED_WRAP_UDecalComponent*)Self)->MoveComponentImpl_WRAP(_p0, _p1, _p2, _p3, _p4, _p5);
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnAttachmentChanged(UDecalComponent* Self)
	{
		Self->OnAttachmentChanged();
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnChildAttached(UDecalComponent* Self, USceneComponent* ChildComponent)
	{
		auto _p0 = ChildComponent;
		((E_PROTECTED_WRAP_UDecalComponent*)Self)->OnChildAttached_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnChildDetached(UDecalComponent* Self, USceneComponent* ChildComponent)
	{
		auto _p0 = ChildComponent;
		((E_PROTECTED_WRAP_UDecalComponent*)Self)->OnChildDetached_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnComponentDestroyed(UDecalComponent* Self, bool bDestroyingHierarchy)
	{
		auto _p0 = bDestroyingHierarchy;
		Self->OnComponentDestroyed(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnHiddenInGameChanged(UDecalComponent* Self)
	{
		((E_PROTECTED_WRAP_UDecalComponent*)Self)->OnHiddenInGameChanged_WRAP();
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnRegister(UDecalComponent* Self)
	{
		Self->OnRegister();
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnUnregister(UDecalComponent* Self)
	{
		Self->OnUnregister();
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnUpdateTransform(UDecalComponent* Self, EUpdateTransformFlags UpdateTransformFlags, ETeleportType Teleport)
	{
		auto _p0 = UpdateTransformFlags;
		auto _p1 = Teleport;
		Self->OnUpdateTransform(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnVisibilityChanged(UDecalComponent* Self)
	{
		((E_PROTECTED_WRAP_UDecalComponent*)Self)->OnVisibilityChanged_WRAP();
	}
	DOTNET_EXPORT auto E_UDecalComponent_PostNetReceive(UDecalComponent* Self)
	{
		Self->PostNetReceive();
	}